<resources>
    <string name="app_name">Quick Learn</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matem_tica">Matemática</string>
    <string name="portugu_s">Português</string>
    <string name="geografia">Geografia</string>
    <string name="fale_conosco">Fale Conosco</string>
    <string name="arraste_para_cima">Arraste para cima</string>
    <string name="categorias">Categorias</string>
    <string name="fale_conosco_abaixo">FALE CONOSCO:</string>
    <string name="soma">SOMA</string>
    <string name="subtra_o">SUBTRAÇÃO</string>
    <string name="multiplica_o">MULTIPLICAÇÃO</string>
    <string name="divis_o">DIVISÃO</string>
    <string name="potencializa_o">POTENCIALIZAÇÃO E RADIAÇÃO</string>
    <string name="raiz">RAIZ</string>
    <string name="OrdemDasOperacoes">ORDEM DAS OPERAÇÕES</string>
    <string name="portugu_s_nivel_1">PORTUGUÊS NIVEL 1</string>
    <string name="portugu_s_nivel_2">PORTUGUÊS NIVEL 2</string>
    <string name="portugu_s_nivel_3">PORTUGUÊS NIVEL 3</string>
    <string name="brasil_e_suas_fronteiras">BRASIL E SUAS FRONTEIRAS</string>
    <string name="maximo_e_minimo_multiplicador_comum">MDC E MMC</string>
    <string name="fra_o">FRAÇÃO</string>
    <string name="distributiva">DISTRIBUTIVA</string>
    <string name="a_adi_o_a_opera_o_matem_tica_que_re_ne_objetos_que_possuem_a_mesma_natureza_mas_que_est_o_em_dois_grupos_distintos_por_exemplo_jo_o_possu_a_uma_caixa_com_12_l_pis_de_cor_quando_chegou_em_casa_ganhou_de_seus_pais_uma_nova_caixa_com_outros_12_agora_ele_possui_24_l_pis_de_cor_nesse_exemplo_os_l_pis_foram_somados">A adição é a operação matemática que reúne objetos que possuem a mesma natureza, mas que estão em dois grupos distintos. Por exemplo: João possuía uma caixa com 12 lápis de cor. Quando chegou em casa, ganhou de seus pais uma nova caixa com outros 12. Agora ele possui 24 lápis de cor. Nesse exemplo, os lápis foram somados.</string>
    <string name="_1_a_ordem_em_que_dois_n_meros_s_o_somados_n_o_altera_o_resultado_da_soma_matematicamente_a_b_b_a_essa_propriedade_chamada_de_comutatividade">1 – A ordem em que dois números são somados não altera o resultado da soma. Matematicamente: a + b = b + a. Essa propriedade é chamada de comutatividade.</string>
    <string name="_2_em_uma_soma_de_tr_s_n_meros_a_b_c_somar_a_b_e_depois_c_tem_o_mesmo_resultado_que_somar_b_c_e_depois_a_matematicamente_a_b_c_a_b_c_essa_propriedade_chamada_de_associatividade">2 – Em uma soma de três números: a + b + c, somar a + b e depois c tem o mesmo resultado que somar b + c e depois a. Matematicamente: (a + b) + c = a + (b + c). Essa propriedade é chamada de associatividade.</string>
    <string name="_3_existe_um_n_mero_chamado_de_elemento_neutro_nesse_caso_zero_que_n_o_influencia_o_resultado_da_soma_assim_a_0_0_a_a">3 – Existe um número, chamado de elemento neutro (nesse caso, zero), que não influencia o resultado da soma. Assim: a + 0 = 0 + a = a.</string>
    <string name="_4_para_todo_n_mero_x_existe_um_n_mero_x_em_que_a_soma_entre_eles_igual_a_0_x_x_0_essa_ltima_propriedade_permite_compreender_a_subtra_o_como_uma_adi_o_de_inversos_aditivos_isso_de_certa_forma_permite_incluir_a_opera_o_subtra_o_na_opera_o_adi_o_tornando_as_uma_s_contudo_para_melhor_compreens_o_dos_alunos_esse_detalhe_pouco_mencionado_em_sala_de_aula_assim_a_subtra_o_77_42_pode_ser_vista_como_a_seguinte_adi_o_77_42">4 – Para todo número x existe um número – x em que a soma entre eles é igual a 0. x + (– x) = 0. Essa última propriedade permite compreender a subtração como uma adição de inversos aditivos. Isso, de certa forma, permite incluir a operação subtração na operação adição, tornando-as uma só. Contudo, para melhor compreensão dos alunos, esse detalhe é pouco mencionado em sala de aula. Assim, a subtração 77 – 42 pode ser vista como a seguinte adição: 77 + (– 42).</string>
    <string name="por_isso_foram_criadas_regras_de_sinais_para_adi_o_de_n_meros_reais_que_s_o_as_seguintes_a_se_os_sinais_dos_n_meros_forem_positivos_o_resultado_da_soma_ser_positivo_b_se_os_sinais_dos_n_meros_forem_negativos_o_resultado_da_soma_ser_negativo_c_se_os_sinais_dos_n_meros_forem_diferentes_deveremos_diminu_los_e_manter_no_resultado_o_sinal_daquele_que_possui_o_maior_m_dulo_ou_seja_aquele_que_maior_independentemente_do_sinal_essas_regras_s_o_muito_substitu_das_em_sala_de_aula_pelo_seguinte_sinais_iguais_soma_e_conserva_sinais_diferentes_subtrai_e_conserva_o_sinal_do_maior">Por isso, foram criadas regras de sinais para adição de números reais, que são as seguintes: a) Se os sinais dos números forem positivos, o resultado da soma será positivo; b) Se os sinais dos números forem negativos, o resultado da soma será negativo; c) Se os sinais dos números forem diferentes, deveremos diminuí-los e manter no resultado o sinal daquele que possui o maior módulo, ou seja, aquele que é maior, independentemente do sinal. Essas regras são muito substituídas em sala de aula pelo seguinte: Sinais iguais, soma e conserva. Sinais diferentes, subtrai e conserva o sinal do maior.</string>
    <string name="exerc_cios_gerais">EXERCÍCIOS GERAIS</string>
    <string name="a_subtra_o_a_opera_o_matem_tica_que_retira_elementos_de_mesma_natureza_de_um_grupo_por_exemplo_se_jo_o_resolvesse_dar_4_de_seus_l_pis_a_um_amigo_ficaria_apenas_com_20">A subtração é a operação matemática que retira elementos de mesma natureza de um grupo. Por exemplo, se João resolvesse dar 4 de seus lápis a um amigo, ficaria apenas com 20.</string>
    <string name="algo_parecido_acontece_com_a_multiplica_o_e_divis_o_todavia_antes_de_expor_esse_fato_necess_rio_compreender_essas_opera_es_e_conhecer_suas_propriedades_a_multiplica_o_entendida_como_uma_sequ_ncia_de_somas_em_que_as_parcelas_s_o_n_meros_iguais_veja_uma_soma_que_cont_m_8_parcelas_4_4_4_4_4_4_4_4_a_multiplica_o_substitui_a_nota_o_da_soma_pela_seguinte_8_4_8_o_n_mero_de_parcelas_e_4_o_n_mero_que_est_sendo_somado_observando_que_o_resultado_da_multiplica_o_acima_32_pois_a_soma_de_8_parcelas_do_n_mero_4_igual_a_32_podemos_definir_a_divis_o_como_opera_o_inversa_32_objetos_divididos_igualmente_em_8_partes_cada_parte_ficar_com_4_desses_32_elementos_as_opera_es_multiplica_o_e_divis_o_tamb_m_s_o_inversas_o_que_nos_faz_pensar_se_assim_como_adi_o_e_subtra_o_tamb_m_poss_vel_compreender_a_divis_o_como_uma_multiplica_o_por_inversos_a_resposta_sim_e_isso_depende_de_uma_das_propriedades_da_multiplica_o">Algo parecido acontece com a multiplicação e divisão. Todavia, antes de expor esse fato, é necessário compreender essas operações e conhecer suas propriedades. A multiplicação é entendida como uma sequência de somas em que as parcelas são números iguais. Veja uma soma que contém 8 parcelas: 4 + 4 + 4 + 4 + 4 + 4 + 4 + 4 A multiplicação substitui a notação da soma pela seguinte: 8·4. 8 é o número de parcelas e 4 é o número que está sendo somado. Observando que o resultado da multiplicação acima é 32, pois a soma de 8 parcelas do número 4 é igual a 32, podemos definir a divisão como operação inversa: 32 objetos divididos igualmente em 8 partes. Cada parte ficará com 4 desses 32 elementos. As operações multiplicação e divisão também são inversas, o que nos faz pensar se, assim como adição e subtração, também é possível compreender a divisão como uma multiplicação por inversos. A resposta é sim e isso depende de uma das propriedades da multiplicação.</string>
    <string name="_1_a_ordem_em_que_os_fatores_s_o_multiplicados_n_o_altera_o_resultado_do_produto_sin_nimo_de_multiplica_o_matematicamente_a_b_b_a_essa_propriedade_chamada_de_comutatividade">1 – A ordem em que os fatores são multiplicados não altera o resultado do produto (sinônimo de multiplicação). Matematicamente: a·b = b·a. Essa propriedade é chamada de comutatividade.</string>
    <string name="_2_em_uma_multiplica_o_que_envolve_3_n_meros_multiplicar_os_dois_primeiros_e_depois_o_ltimo_tem_o_mesmo_resultado_que_multiplicar_os_dois_ltimos_e_depois_o_primeiro_observe_a_b_c_a_b_c_essa_propriedade_chamada_de_associatividade">2 – Em uma multiplicação que envolve 3 números, multiplicar os dois primeiros e depois o último tem o mesmo resultado que multiplicar os dois últimos e depois o primeiro. Observe: (a·b)·c = a·(b·c). Essa propriedade é chamada de associatividade.</string>
    <string name="_3_existe_um_elemento_nesse_caso_o_n_mero_1_chamado_de_elemento_neutro_que_n_o_influencia_o_resultado_de_uma_multiplica_o_matematicamente_a_1_1_a_a">3 – Existe um elemento (nesse caso, o número 1), chamado de elemento neutro, que não influencia o resultado de uma multiplicação. Matematicamente: a·1 = 1·a = a.</string>
    <string name="_4_para_todo_n_mero_existe_um_elemento_inverso_e_a_multiplica_o_de_um_n_mero_pelo_seu_inverso_resulta_no_elemento_neutro_assim_a_1_a_1_o_elemento_inverso_da_multiplica_o_representado_por_uma_fra_o_e_d_precedentes_para_que_qualquer_divis_o_seja_a_multiplica_o_de_um_n_mero_por_algum_inverso_por_exemplo_a_divis_o_16_4_o_mesmo_que_a_multiplica_o_a_seguir_16_1_4_o_resultado_dessa_multiplica_o_4">4 – Para todo número, existe um elemento inverso, e a multiplicação de um número pelo seu inverso resulta no elemento neutro. Assim: a·(1/a) = 1. O elemento inverso da multiplicação é representado por uma fração e dá precedentes para que qualquer divisão seja a multiplicação de um número por algum inverso. Por exemplo, a divisão 16:4 é o mesmo que a multiplicação a seguir: 16·1/4. O resultado dessa multiplicação é 4.</string>
    <string name="tamb_m_existem_regras_de_sinais_para_a_multiplica_o_elas_s_o_as_seguintes_em_uma_multiplica_o_sinais_iguais_t_m_como_resultado_um_n_mero_positivo_e_sinais_diferentes_t_m_como_resultado_um_n_mero_negativo">Também existem regras de sinais para a multiplicação. Elas são as seguintes: “Em uma multiplicação, sinais iguais têm como resultado um número positivo e sinais diferentes têm como resultado um número negativo.”</string>
    <string name="existe_ainda_uma_propriedade_que_envolve_multiplica_o_e_adi_o_ao_mesmo_tempo_assim_conforme_o_discutido_acima_tamb_m_envolve_divis_o_e_subtra_o_igualmente_dados_os_n_meros_reais_a_b_e_c_vale_a_b_c_a_b_a_c">Existe ainda uma propriedade que envolve multiplicação e adição ao mesmo tempo. Assim, conforme o discutido acima, também envolve divisão e subtração igualmente. Dados os números reais a, b e c, vale: a·(b + c) = a·b + a·c</string>
    <string name="distributiva_e_suas_propriedades">DISTRIBUTIVA E SUAS PROPRIEDADES</string>
    <string name="potencializa_o_e_radia_o_e_suas_propriedades">POTENCIALIZAÇÃO E SUAS PROPRIEDADES</string>
    <string name="radicia_o_a_opera_o_matem_tica_inversa_potencia_o_enquanto_a_potencia_o_uma_multiplica_o_na_qual_todos_os_fatores_s_o_iguais_a_radicia_o_procura_descobrir_que_fatores_s_o_esses_dando_o_resultado_dessa_multiplica_o">É a operação matemática inversa à potenciação. Enquanto a potenciação é uma multiplicação na qual todos os fatores são iguais, a radiciação procura descobrir que fatores são esses, dando o resultado dessa multiplicação.</string>
    <string name="radicia_o_e_suas_propriedades">RADICIAÇÃO E SUAS PROPRIEDADES:</string>
    <string name="jogo_de_sinal">JOGO DE SINAL</string>
</resources>