<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".Fragments.MainFragment.MainFragment">

    <TextView
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40sp"

        android:padding="4sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:text="@string/categorias"
        />

   <ImageView
       android:id="@+id/initial_image"
       android:layout_width="300sp"
       android:layout_height="100sp"

       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@id/top_text"

       android:layout_marginTop="20sp"

       />

    <TextView
        android:id="@+id/middle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/initial_image"
        app:layout_constraintBottom_toTopOf="@id/container_category"

        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"

        android:text="@string/arraste_para_cima"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"

        app:drawableEndCompat="@drawable/ic_toparrow" />


    <LinearLayout
        android:id="@+id/container_category"

        android:background="@drawable/shape_container_category"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middle_text"


        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="3dp"

       >

     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"

             android:orientation="vertical"

             >

             <androidx.cardview.widget.CardView

                 android:id="@+id/bt_Calculum"
                 android:layout_width="match_parent"

                 android:layout_height="120dp"

                 android:background="@drawable/shape_container_components"

                 app:cardCornerRadius="20dp"
                 app:cardElevation="0dp">

                 <TextView

                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"

                     android:layout_marginTop="35sp"
                     android:gravity="center"
                     android:paddingHorizontal="20sp"
                     android:text="@string/matem_tica"
                     android:textColor="@color/lime"

                     android:textSize="35sp"
                     android:textStyle="bold"


                     />


             </androidx.cardview.widget.CardView>

             <androidx.cardview.widget.CardView
                 android:id="@+id/bt_Port"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:layout_marginTop="20dp"


                 app:cardCornerRadius="20dp"
                 app:cardElevation="0dp"

                 >
                 <TextView

                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"

                     android:gravity="center"
                     android:textColor="@color/lime"
                     android:textSize="35sp"
                     android:text="@string/portugu_s"
                     android:textStyle="bold"

                     android:paddingHorizontal="20dp"
                     android:layout_marginTop="35dp"


                     />


             </androidx.cardview.widget.CardView>

             <androidx.cardview.widget.CardView
                 android:id="@+id/bt_Geo"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:layout_marginTop="20dp"


                 app:cardCornerRadius="20dp"
                 app:cardElevation="0dp"

                 >
                 <TextView

                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"

                     android:gravity="center"
                     android:textColor="@color/lime"
                     android:textSize="35sp"
                     android:text="@string/geografia"
                     android:textStyle="bold"

                     android:paddingHorizontal="20dp"
                     android:layout_marginTop="35dp"


                     />


             </androidx.cardview.widget.CardView>

             <androidx.cardview.widget.CardView
                 android:id="@+id/bt_Atendimento"
                 android:layout_width="match_parent"
                 android:layout_height="120dp"
                 android:layout_marginTop="20dp"


                 app:cardCornerRadius="20dp"
                 app:cardElevation="0dp"

                 >
                 <TextView

                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"

                     android:gravity="center"
                     android:textColor="@color/lime"
                     android:textSize="35sp"
                     android:text="@string/fale_conosco"
                     android:textStyle="bold"

                     android:paddingHorizontal="20sp"
                     android:layout_marginTop="35sp"


                     />


             </androidx.cardview.widget.CardView>

         </LinearLayout>

     </androidx.core.widget.NestedScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>