<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.CaculumFragments.MultiplicacaoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/shape_container_components"

        android:orientation="vertical"

        android:padding="20sp"

        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"

                android:padding="15sp"

                >

                <TextView
                    android:id="@+id/text_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="MULTIPLICAÇÃO E SUAS PROPRIEDADES"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    android:gravity="center"



                    />

                <TextView
                    android:id="@+id/text_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10sp"

                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    android:gravity="center"
                    android:padding="10sp"

                    android:text="@string/algo_parecido_acontece_com_a_multiplica_o_e_divis_o_todavia_antes_de_expor_esse_fato_necess_rio_compreender_essas_opera_es_e_conhecer_suas_propriedades_a_multiplica_o_entendida_como_uma_sequ_ncia_de_somas_em_que_as_parcelas_s_o_n_meros_iguais_veja_uma_soma_que_cont_m_8_parcelas_4_4_4_4_4_4_4_4_a_multiplica_o_substitui_a_nota_o_da_soma_pela_seguinte_8_4_8_o_n_mero_de_parcelas_e_4_o_n_mero_que_est_sendo_somado_observando_que_o_resultado_da_multiplica_o_acima_32_pois_a_soma_de_8_parcelas_do_n_mero_4_igual_a_32_podemos_definir_a_divis_o_como_opera_o_inversa_32_objetos_divididos_igualmente_em_8_partes_cada_parte_ficar_com_4_desses_32_elementos_as_opera_es_multiplica_o_e_divis_o_tamb_m_s_o_inversas_o_que_nos_faz_pensar_se_assim_como_adi_o_e_subtra_o_tamb_m_poss_vel_compreender_a_divis_o_como_uma_multiplica_o_por_inversos_a_resposta_sim_e_isso_depende_de_uma_das_propriedades_da_multiplica_o"
                    />

                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10sp"

                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    android:gravity="center"
                    android:padding="10sp"

                    android:text="@string/_1_a_ordem_em_que_os_fatores_s_o_multiplicados_n_o_altera_o_resultado_do_produto_sin_nimo_de_multiplica_o_matematicamente_a_b_b_a_essa_propriedade_chamada_de_comutatividade"
                    />

                <TextView
                    android:id="@+id/text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10sp"

                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    android:gravity="center"
                    android:padding="10sp"

                    android:text="@string/_2_em_uma_multiplica_o_que_envolve_3_n_meros_multiplicar_os_dois_primeiros_e_depois_o_ltimo_tem_o_mesmo_resultado_que_multiplicar_os_dois_ltimos_e_depois_o_primeiro_observe_a_b_c_a_b_c_essa_propriedade_chamada_de_associatividade"
                    />

                <TextView
                    android:id="@+id/text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10sp"

                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    android:gravity="center"
                    android:padding="10sp"

                    android:text="@string/_3_existe_um_elemento_nesse_caso_o_n_mero_1_chamado_de_elemento_neutro_que_n_o_influencia_o_resultado_de_uma_multiplica_o_matematicamente_a_1_1_a_a"
                    />

                <TextView
                    android:id="@+id/text_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10sp"

                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    android:gravity="center"
                    android:padding="10sp"

                    android:text="@string/_4_para_todo_n_mero_existe_um_elemento_inverso_e_a_multiplica_o_de_um_n_mero_pelo_seu_inverso_resulta_no_elemento_neutro_assim_a_1_a_1_o_elemento_inverso_da_multiplica_o_representado_por_uma_fra_o_e_d_precedentes_para_que_qualquer_divis_o_seja_a_multiplica_o_de_um_n_mero_por_algum_inverso_por_exemplo_a_divis_o_16_4_o_mesmo_que_a_multiplica_o_a_seguir_16_1_4_o_resultado_dessa_multiplica_o_4"
                    />

                <TextView
                    android:id="@+id/text_regras"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="10sp"

                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"

                    android:gravity="center"
                    android:padding="10sp"

                    android:text="@string/tamb_m_existem_regras_de_sinais_para_a_multiplica_o_elas_s_o_as_seguintes_em_uma_multiplica_o_sinais_iguais_t_m_como_resultado_um_n_mero_positivo_e_sinais_diferentes_t_m_como_resultado_um_n_mero_negativo"
                    />

                <androidx.cardview.widget.CardView

                    android:id="@+id/bt_videoMultiplicacao"

                    android:layout_width="match_parent"
                    android:layout_height="120dp"

                    android:background="@drawable/shape_container_components"

                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp"

                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:padding="10dp"

                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="VIDEO AULAS"
                        android:textColor="@color/lime"
                        android:textStyle="bold"
                        android:textSize="34sp"

                        android:gravity="center"

                        android:padding="20dp"

                        android:layout_marginTop="18dp"

                        />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>